ingress-host-based/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
