ingress-host-based/ingressrule-connected-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress-rule
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  
  rules:
  - host: connected-city.com
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: connectedcity-service
            port:
              number: 80
  - host: connected-factory.com
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: connectedfactory-service
            port:
              number: 80
