ingress-host-based/ingressrules-tfdash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
   kubernetes.io/ingress.class: traefik
spec:

  rules:
  - host: traefik-dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-web-ui
            port:
              number: 80
